<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/navTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grie"
        android:padding="20dp"
        android:text="@string/navigation"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="666dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/nomPrenomTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom_amp_prenom"
            android:textSize="20sp">

        </TextView>

        <EditText
            android:id="@+id/nomPrenomEditTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nom_et_prenom"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/EmailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp">

        </TextView>

        <EditText
            android:id="@+id/emailEditTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/phoneTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20sp">

        </TextView>

        <EditText
            android:id="@+id/phoneEditTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/telephone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/adresseTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adresse"
            android:textSize="20sp">

        </TextView>

        <EditText
            android:id="@+id/adresseEditTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/adresse"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/villeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ville"
            android:textSize="20sp">

        </TextView>

        <Spinner
            android:id="@+id/villeSpinner"
            android:layout_width="match_parent"
            android:layout_height="54dp">

        </Spinner>
        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Genre"
            android:textSize="20sp">

        </TextView>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/masculin"
                >

            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/feminin"
                >
            </RadioButton>
        </RadioGroup>

        <Button
            android:id="@+id/btnEnvoyer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/grie"
            android:padding="10dp"
            android:text="@string/envoyer" />

    </LinearLayout>

</LinearLayout>